examples/test/testpolicy666.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy666
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key28: value18
      key5: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value37
          key43: value23
          key23: value48
      podSelector:
        matchLabels:
          key1: value46
